# aws-management

./: .gitignore  LICENSE  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
aws_management/: __main__.py  glacier.py
tests/: test_glacier.py
