[project]
name = "aws-management"
version = "0.0.1"
description = "AWS Management Tools"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Matt Austin", email = "matt@mattaust.in" }
]
keywords = ["aws"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AWS CDK",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed"
]

dependencies = [
    "boto3",
    "click",
    "tqdm"
]

[project.scripts]
aws-manage = "aws_management.__main__:cli"

[project.urls]
Repository = "https://github.com/maafy6/aws-management"

[build-system]
requires = ["setuptools"]

[tool.ruff]
select = ["E", "W", "F", "I", "C", "B"]
line-length = 88

[tool.setuptools]
packages = ["aws_management"]
